fix whitespace mb?

--- a/letterboxed_wasm/stylesheet.css
+++ b/letterboxed_wasm/stylesheet.css
@@ -41,6 +41,7 @@ td.yellow {
 
 #resultlist {
     color: gray;
+    white-space: pre-wrap;
 }
 
 #resultlist::first-line {
